--- a/mockup-2/assets/css/main.css
+++ b/mockup-2/assets/css/main.css
@@ -115,7 +115,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: rgb(14, 6, 3);
+		color: #0b3a11;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16.5pt;
 		font-weight: normal;
@@ -158,8 +158,12 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #ffffff;
+			color: #fec20f;
 		}
+
+        #footer > a:hover {
+            color: white;
+        }
 
 	strong, b {
 		color: #000000;
@@ -175,7 +179,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #000000;
+		color: #0b3a11;
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 0.5em 0;
@@ -1835,7 +1839,7 @@ input, select, textarea {
 		border: solid 1px !important;
 		border-color: #fec20f !important;
 		border-radius: 3em;
-		color: #1C1F4C !important;
+		color: #0b3a11 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.6em;
@@ -1945,7 +1949,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			border-color: rgba(255, 255, 255, 0.55) !important;
+			border-color: #0b3a11 !important;
 		}
 
 			input[type="submit"]:hover:after,
@@ -2295,7 +2299,7 @@ input, select, textarea {
 		}
 
 	label {
-		color: #ffffff;
+		color: #0b3a11;
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 0.7em 0;
@@ -2316,7 +2320,7 @@ input, select, textarea {
 		background: rgba(255, 255, 255, 0.05);
 		border-radius: 0.25em;
 		border: none;
-		border: solid 1px rgba(255, 255, 255, 0.15);
+		border: solid 1px #387233;
 		color: inherit;
 		display: block;
 		outline: 0;
@@ -2340,7 +2344,7 @@ input, select, textarea {
 		input[type="tel"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #ffffff;
+			border-color: #0b3a11;
 			box-shadow: 0 0 0 1px #ffffff;
 		}
 
@@ -3063,12 +3067,18 @@ input, select, textarea {
 				opacity: 1;
 			}
 
+        .spotlights > section:nth-child(1) {
+			background-color: #ffffff;
+		}
+
 		.spotlights > section:nth-child(2) {
-			background-color: rgba(0, 0, 0, 0.05);
+			background-color: #ffffff;
+            /* border-top: 3px solid #063322; */
 		}
 
 		.spotlights > section:nth-child(3) {
-			background-color: rgba(0, 0, 0, 0.1);
+			background-color: #ffffff;
+            /* border-top: 3px solid #063322; */
 		}
 
 		.spotlights > section.inactive > .image:before,
@@ -3248,11 +3258,11 @@ input, select, textarea {
 		}
 
 		.wrapper.style2 {
-			background-color: #fff8f4;
+			background-color: #fbfff8;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #fff8f4;
+			background-color: #FFF0C4;
 		}
 
 		.wrapper.style3 {
@@ -3513,7 +3523,7 @@ input, select, textarea {
 
 	#footer > .inner .menu {
 		font-size: 0.8em;
-		color: rgb(0, 0, 0);
+		color: #0b3a11;
 	}
 
 	#header + #wrapper + #footer > .inner {
@@ -3737,7 +3747,7 @@ input, select, textarea {
 			-ms-transition: color 0.2s ease;
 			transition: color 0.2s ease;
 			border: 0;
-			color: rgba(255, 255, 255, 0.35);
+			color: rgba(255, 255, 255, 0.726);
 			display: block;
 			font-size: 0.6em;
 			font-weight: bold;
@@ -3761,14 +3771,14 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:before {
-				background: #1c1f4c;
+				background: #974d07;
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #ad5c00, #ffe9a1);
-				background-image: -webkit-linear-gradient(to right, #ad5c00, #ffe9a1);
-				background-image: -ms-linear-gradient(to right, #ad5c00, #ffe9a1);
-				background-image: linear-gradient(to right, #ad5c00, #ffe9a1);
+				background-image: -moz-linear-gradient(to right, #fff4e8, #fff4e8);
+				background-image: -webkit-linear-gradient(to right, #fff4e8, #fff4e8);
+				background-image: -ms-linear-gradient(to right, #fff4e8, #fff4e8);
+				background-image: linear-gradient(to right, #fff4e8, #fff4e8);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -3781,7 +3791,7 @@ input, select, textarea {
 			}
 
 			#sidebar nav a.active {
-				color: #1C1F4C;
+				color: #0b3a11;
 			}
 
 				#sidebar nav a.active:after {
@@ -3874,10 +3884,10 @@ input, select, textarea {
 
         #intro {
             background-attachment: fixed;
-            background-image: url("images/honeycomb-background.svg");
-            background-position: top right;
+            background-image: url("images/nature-background.svg");
+            background-position: center;
+            background-size: 150% 100%;
             background-repeat: no-repeat;
-            background-size: 100% 100%;
         }
 
         #yellow-dragonfly {
@@ -3915,18 +3925,28 @@ input, select, textarea {
 /* Who We Are */
 
 #two {
-    background-image: url(images/yellow-truck-blur.jpg);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url(images/blurry-leaf.png);
+    background-size: 100%;
     background-attachment: fixed;
 }
 
 #yellow-truck {
     width: 100%;
     object-fit: cover;
-    height: 450px;
+    height: auto;
     border: white solid 5px;
     border-radius: 3px;
 }
 
 /* Contact */
+
+section#three {
+    background-image: url(images/leafy-blur.png);
+    background-size: 100%;
+}
+
+/* Footer */
+
+#footer {
+    background-color: #fec20f;
+}
