--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ a.white {
     background-position: center;
     background-attachment: fixed;
     text-align: center;
-    height: 100vh;
+    height: 95vh;
     font-size: 1.3em;
     padding-top: 70px;
 }
@@ -149,7 +149,7 @@ h1 {
 
 .pest-image {
     flex: 1;
-    height: auto;
+    height: 100%;
 }
 
 .pest-image > img {
@@ -315,7 +315,7 @@ footer ul {
         height: auto;
         align-items: center;
         padding: 10px;
-        position: relative;
+        position: static;
         font-size: .9em;
     }
 
@@ -410,7 +410,7 @@ footer ul {
 @media (max-width: 490px) {
     /* HEADER */
     #header {
-        position: relative;
+        position: static;
     }
     
     #desktop-header {
@@ -427,10 +427,8 @@ footer ul {
 
     /* MAIN */
     #main {
-        padding-top: 25px;
         background-size: 150%;
         font-size: 1.1em;
-        padding-top: 0;
     }
 
     #main .button {
@@ -446,7 +444,7 @@ footer ul {
     div.pest-example {
         width: 100%;
         flex-wrap: wrap;
-        height: auto;
+        height: 100%;
     }
     
     div.pest-image {
