--- a/rebuilt/styles.css
+++ b/rebuilt/styles.css
@@ -35,8 +35,7 @@ ul {
 a {
     text-decoration: none;
     color: #0b3a11;
-
-    
+    transition: all 300ms ease;
 }
 
 a:hover {
@@ -56,6 +55,8 @@ h3 {
 .hide-for-mobile {
     display: none;
 }
+
+
 
 /***********************************************
 *** HEADER
@@ -80,10 +81,12 @@ header ul {
     justify-content: space-evenly;
 }
 
-.active {
+header a.active {
     color: white;
     font-weight: 900;
 }
+
+
 
 /***********************************************
 *** MAIN SECTION
@@ -170,7 +173,7 @@ div.pest-image {
     position: relative;
     & img {
         width: 100%;
-        height: 100%;
+        height: auto;
         object-fit: cover;
     }
 }
@@ -199,6 +202,8 @@ div.pest-text-content {
     margin-top: 2em;
 }
 
+
+
 /***********************************************
 *** SECTION 3: WHO WE ARE
 ************************************************/
@@ -208,7 +213,7 @@ div.pest-text-content {
     background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url(images/blurry-leaf.png);
     background-attachment: fixed;
     background-size: 100%;
-    padding: 20rem 10rem;
+    padding: 12rem 10rem;
     font-size: 1.1em;
 }
 
@@ -239,6 +244,8 @@ div.pest-text-content {
     }
 }
 
+
+
 /***********************************************
 *** SECTION 4: GET IN TOUCH
 ************************************************/
@@ -251,7 +258,7 @@ div.pest-text-content {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 20rem 10rem 10rem 10rem;
+    padding: 10rem 10rem 3rem 10rem;
     font-size: 1.2em;
 }
 
@@ -347,6 +354,8 @@ textarea {
     }
 }
 
+
+
 /***********************************************
 *** FOOTER
 ************************************************/
@@ -356,7 +365,8 @@ textarea {
     justify-content: space-between;
     align-items: center;
     padding: 0 2rem;
-    height: 5vh;
+    height: 8vh;
+    font-size: 1rem;
 }
 
 .footer a:hover {
@@ -366,6 +376,145 @@ textarea {
 .footer-link {
     border-bottom: dotted 1px #0b3a11;
 }
+
+
+
+/***********************************************
+*** SUBPAGES
+************************************************/
+
+/* Header */
+    .subpage-header {
+        padding: 0 4rem;
+        height: 7vh;
+    }
+
+    .subpage-header a {
+        color: rgba(255, 255, 255, 0.8);
+    }
+
+    div.header {
+        width: 50%;
+    }
+
+    .header-logo {
+        display: flex;
+        align-items: center;
+        font-size: 1.6em;
+        gap: 1rem;
+    }
+
+    .logo-link {
+        width: 5rem;
+        padding-top: 1%;
+
+        & img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    a.company-logo {
+        color: white;
+    }
+
+/* Main Body */
+    main {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10vh 7vw;
+        height: auto;
+        background-size: 150%;
+    }
+
+    hr {
+        border: 2px solid #fec20f;
+        width: 100%;
+        margin-bottom: 6vh;
+    }
+
+    main p {
+        margin: 0;
+        font-size: 1.3em;
+    }
+
+    .main-container {
+        padding-top: 4vh;
+        display: flex;
+        gap: 1.5rem;
+    }
+
+    .subpage-content {
+        gap: 2em;
+        display: flex;
+        flex-direction: column;
+        flex: 2;
+        padding-top: .5em;
+    }
+
+    .subpage-content .button {
+        width: 50%;
+        text-align: center;
+    }
+
+    .subpage-image {
+        display: flex;
+        flex-direction: column;
+        gap: 2em;
+        flex: 1;
+
+        & img {
+            width: 100%;
+            height: auto;
+            border-radius: 20px;
+        }
+    }
+
+    /* Wasps */
+
+    .wasp p {
+        margin: .7em 0;
+    }
+
+    .wasp a {
+        margin: 1em auto 1.5em auto;
+    }
+
+    .wasp-subpage-image {
+        display: flex;
+        width: 100%;
+        height: auto;
+        gap: 1em;
+    }
+
+    .wasp-image {
+        width: 33%; 
+        height: auto;
+
+        & img {
+            width: 100%;
+            border-radius: 20px;
+        }
+    }
+
+    /* Other Insects */
+
+    div.insect-images {
+        display: flex;
+        gap: 1em;
+        margin-top: 2em;
+    }
+
+    .insect-images .bug-image {
+        width: 50%;
+
+        & img {
+            width: 100%;
+            height: auto;
+            border-radius: 20px;
+        }
+    }
 
 /***********************************************
 *** MEDIA QUERIES
@@ -379,5 +528,168 @@ textarea {
 
         #company {
             font-size: 1.4em;
+        }
+    }
+
+/* Mobile */
+    @media (max-width: 930px) {
+        
+        .hide-for-mobile {
+            display: block;
+        }
+
+        .hide-for-desktop {
+            display: none;
+        }
+        
+        /* Header */
+
+        header {
+            justify-content: center;
+            width: 100%;
+        }
+        
+        nav {
+            display: none;
+        }
+
+        /* Main */
+
+        #main {
+            width: 100%;
+            height: 100vh;
+        }
+
+        .logo-img {
+            width: 25rem;
+        }
+
+        a.main {
+            margin-top: 6vh;
+        }
+
+        /* Section 2: What We Treat (Pests) */
+
+        #pests {
+            padding-bottom: 2vh;
+        }
+
+        .pest-example {
+            flex-direction: column;
+            height: auto;
+            width: 100%;
+        }
+
+        div.pest-image {
+            max-height: 35vh;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        div.pest-text-content {
+            padding: 5vh 10vw;
+            text-align: center;
+        }
+
+
+        /* Section 3: Who We Are*/
+
+        #company {
+            width: 100%;
+            padding: 0;
+            background-size: cover;
+        }
+
+        .company-container {
+            flex-direction: column;
+            height: auto;
+            gap: 0;
+        }
+
+        .company-text {
+            padding: 5vh;
+        }
+
+        .company-img {
+            height: auto;
+        }
+
+        .company-img img {
+            border-radius: 0;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        /* Section 4: Get in Touch */
+
+        #contact {
+            width: 100%;
+            background-size: cover;
+            background-position: bottom right;
+            padding: 10vh 5vh 2vh 5vh;
+        }
+
+        .contact-container {
+            flex-direction: column;
+        }
+
+        .name, .phone {
+            width: 100%;
+        }
+
+        /* Footer */
+
+        ul.footer {
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: .5em;
+        }
+
+        /* Subpages */
+
+        div.header {
+            width: 100%;
+        }
+
+        main {
+            padding: 10vh 7vw 5vh 7vw;
+            text-align: center;
+        }
+
+        main h1 {
+            text-align: center;
+        }
+
+        .main-container {
+            flex-direction: column;
+        }
+
+        .subpage-content {
+            padding-bottom: 3vh;
+        }
+
+        .subpage-content a.button {
+            margin: auto;
+            width: 80%;
+            font-size: 1em;
+        }
+
+        .wasp-subpage-image {
+            flex-direction: column;
+        }
+
+        .wasp-image {
+            width: 100%;
+        }
+
+        .insect-images {
+            flex-direction: column;
+
+            & .bug-image {
+                width: 100%;
+            }
         }
     }
