--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,7 @@ div.pest-image {
     position: relative;
     & img {
         width: 100%;
-        height: auto;
+        height: 100%;
         object-fit: cover;
     }
 }
