Change header position to static on mobile

--- a/old-files/style.css
+++ b/old-files/style.css
@@ -409,8 +409,12 @@ footer ul {
 /* MOBILE LAYOUT */
 @media (max-width: 490px) {
     /* HEADER */
+    header {
+        position: scroll;
+    }
+    
     #header {
-        position: static;
+        position: scroll;
     }
     
     #desktop-header {
