style: change spacing on mobile view

--- a/styles.css
+++ b/styles.css
@@ -576,7 +576,6 @@ textarea {
         header {
             justify-content: center;
             width: 100%;
-            position: static;
         }
         
         nav {
@@ -587,7 +586,10 @@ textarea {
 
         #main {
             width: 100%;
-            height: 95vh;
+            height: 120vh;
+            background-size: 150%;
+            align-items: flex-start;
+            padding-top: 7vh;
         }
 
         .logo-img {
