Change a.main font size for mobile

--- a/styles.css
+++ b/styles.css
@@ -598,6 +598,7 @@ textarea {
 
         a.main {
             margin-top: 6vh;
+            font-size: 1em;
         }
 
         /* Section 2: What We Treat (Pests) */
