--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ html {
     box-sizing: border-box;
     width: 100%;
     scroll-behavior: smooth;
+    overscroll-behavior: none;
+    background-color: white;
 }
 
 *, *:before, *:after {
