--- a/styles.css
+++ b/styles.css
@@ -588,10 +588,8 @@ textarea {
 
         #main {
             width: 100%;
-            height: 120vh;
+            height: 100dvh;
             background-size: 150%;
-            align-items: flex-start;
-            padding-top: 7vh;
         }
 
         .logo-img {
