--- a/styles.css
+++ b/styles.css
@@ -318,6 +318,10 @@ textarea {
     height: 15em;
 }
 
+.captcha-div {
+    width: 100%;
+}
+
 .button {
     font-size: 1.2em;
     background-color: #fec20f;
